minor fixes in navbar, sidebar and hero component and created portal for sidebar to avoid overlaps

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.sidebar {
+  z-index: 999;
+}
